# test_sfml_project

./: .gitignore  CMakeLists.txt  README.md  clang-format  game.cpp  game.hpp  main.cpp  resource_holder.hpp
.github/workflows/: release.yml
command/: CMakeLists.txt  category_command.hpp  command.hpp  command_category.cpp  command_category.hpp  command_queue.cpp  command_queue.hpp
drawing/: CMakeLists.txt  aircraft.cpp  aircraft.hpp  application.cpp  application.hpp  context.hpp  data_tables.cpp  data_tables.hpp  entity.cpp  entity.hpp  entity_commands.cpp  entity_commands.hpp  game_state.cpp  game_state.hpp  loading_state.cpp  loading_state.hpp  menu_state.cpp  menu_state.hpp  pause_state.cpp  pause_state.hpp  player.cpp  player.hpp  player_contoller.cpp  player_contoller.hpp  projectile.cpp  projectile.hpp  scene_node.cpp  scene_node.hpp  settings_state.cpp  settings_state.hpp  sprite_node.cpp  sprite_node.hpp  state.cpp  state.hpp  state_stack.cpp  state_stack.hpp  text_node.cpp  text_node.hpp  title_state.cpp  title_state.hpp  (+2 more)
gui/: CMakeLists.txt  button.cpp  button.hpp  component.cpp  component.hpp  container.cpp  container.hpp  label.cpp  label.hpp
resource_holder/: CMakeLists.txt  resource_holder.hpp  resource_identifiers.hpp
utility/: CMakeLists.txt  flags.hpp  math.cpp  math.hpp  resource_holder.hpp  resource_identifiers.hpp  string.cpp  string.hpp  task.cpp  task.hpp  utility.hpp
